# k8smicro

./: .dockerignore  .gitignore  Dockerfile  README.md  build-image.sh  deploy.sh  deploy_app.yaml  deploy_postgres.yaml  kube-deploy.yaml  pyproject.toml
k8smicro/caller/: app.py
k8smicro/web/: app.py  helpers.py
