[tool.poetry]
name = "k8smicro"
version = "0.1.0"
description = "microservice on k8s"
authors = ["Safarveisi <sajad.safarveisi@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
requests = "^2.31.0"
uvicorn = "^0.29.0"
dill = "^0.3.8"
boto3 = "^1.34.101"
pandas = "^2.2.2"
psycopg = "3.1.10"
psycopg-binary = "3.1.10"

[tool.poetry.group.dev.dependencies]
ipywidgets = "^8.1.2"
ipykernel = "^6.29.4"
autopep8 = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
